syntax="proto3";

package proto;

message Peer {
    string ID = 1;
    string Username = 2;
    string Endpoint = 3;
    string PublicKey = 4;
    string PrivateKey = 5;
}

message GetTargetRequest {
    string Username = 1;
}

message GetTargetResponse {
    string Endpoint = 1;
    string Username = 2;
}

message RegisterRequest {
    string peerId = 1;
    string Username = 2;
}

message RegisterResponse {
    int32 Status = 1;
    string Message = 2; 
}

message GenesisRequest {
    string peerId = 1;
    string targetPeer = 2;
}

service Genesis {
    rpc Register(RegisterRequest) returns (RegisterResponse) {};
    rpc GetTarget(GetTargetRequest) returns (GetTargetResponse) {};
}